--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.board {
+  display: flex;
+}
+
+.box {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(0, 0, 134);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box_circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: white;
+}
